force-app/main/default/objects/Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>วันที่จัดประชุม (Actual)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Safety_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Safety Standard</label>
        <referenceTo>Design_Safety_Standard__c</referenceTo>
        <relationshipLabel>Meeting</relationshipLabel>
        <relationshipName>Meeting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Report_file__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ Report การจัด Meeting</inlineHelpText>
        <label>Meeting Report File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>ประเภทการประชุม</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HAZOP</fullName>
                </value>
                <value>
                    <fullName>SIL</fullName>
                </value>
                <value>
                    <fullName>HAZID</fullName>
                </value>
                <value>
                    <fullName>Hazardous Area Classification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <label>วันที่จะจัดประชุม (Plan)</label>
        <type>DateTime</type>
    </fields>
    <label>Meeting</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>